見出しを丁寧に変更

--- a/assessment.html
+++ b/assessment.html
@@ -6,7 +6,7 @@
   <title>Tatsumiが作ったあなたのいいところ診断</title>
   <link rel="stylesheet" href="assessment.css">
 </head>
-<body><h1>あなたのいいところは</h1>
+<body><h1>あなたのいいところを診断します。</h1>
   <p>診断したい名</p>
   <input type="text" size="40" max-length="20" id="user-name">
   <!----テキストやパスワードにのみ使用可-->
